projekt/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: backend-deployment
  labels:
    type: backend

spec:
  template:
    metadata:
      labels:
        type: backend

    spec:
      containers:
        - name: backend-pod
          image: backend
          imagePullPolicy: Never
          ports:
            - containerPort: 5000
  replicas: 2
  selector:
    matchLabels:
      type: backend
