projekt/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: frontend-deployment
  labels:
    type: frontend

spec:
  template:
    metadata:
      labels:
        type: frontend

    spec:
      containers:
        - name: frontend-pod
          image: kasiawinkler/frontend
          ports:
            - containerPort: 80

  replicas: 2
  selector:
    matchLabels:
      type: frontend
