projekt/mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: mongo-deployment
  labels:
    type: mongo

spec:
  template:
    metadata:
      labels:
        type: mongo

    spec:
      containers:
        - name: mongo-pod
          image: mongo
          volumeMounts:
          - name: mongo-volume
            mountPath: /data/db
          ports:
          - containerPort: 27017
      volumes:
      - name: mongo-volume
        persistentVolumeClaim:
            claimName: mongo-pvc


  replicas: 1
  selector:
    matchLabels:
      type: mongo
