projekt/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: redis-deployment
  labels:
    type: redis

spec:
  template:
    metadata:
      labels:
        type: redis

    spec:
      containers:
        - name: redis-pod
          image: redis
          ports:
          - containerPort: 27017
  replicas: 3
  selector:
    matchLabels:
      type: redis
