projekt/backend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: backend-service

spec:
  type: NodePort

  ports:
    - port: 5000
      targetPort: 5000
      nodePort: 30300

  selector:
    type: backend
