projekt/frontend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: frontend-service

spec:
  type: NodePort
  
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30300

  selector:
    type: frontend
